# libNTP

./: CMakeLists.txt  CMakeLists_external.txt  README.md
include/: ntp.h
src/: ntp.cpp
ut/: ntp_ut.cpp
